# SMTCellUCSD

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
config/: config_2F_4T.json  config_3F_5T.json  config_3F_6T.json  smtcell.lyp
doc/: AGR_Design.md  Design.md
inputPinLayouts/pinLayouts_2F_4T/: AND2_X1.pinLayout  AND2_X2.pinLayout  AND3_X1.pinLayout  AND3_X2.pinLayout  AOI21_X1.pinLayout  AOI21_X2.pinLayout  AOI22_X1.pinLayout  AOI22_X2.pinLayout  BUF_X1.pinLayout  BUF_X2.pinLayout  BUF_X4.pinLayout  BUF_X8.pinLayout  INV_X1.pinLayout  INV_X2.pinLayout  INV_X4.pinLayout  INV_X8.pinLayout  LHQ_X1.pinLayout  NAND2_X1.pinLayout  NAND2_X2.pinLayout  NAND3_X1.pinLayout  NAND3_X2.pinLayout  NAND4_X1.pinLayout  NAND4_X2.pinLayout  NOR2_X1.pinLayout  NOR2_X2.pinLayout  NOR3_X1.pinLayout  NOR3_X2.pinLayout  NOR4_X1.pinLayout  NOR4_X2.pinLayout  OAI21_X1.pinLayout  OAI21_X2.pinLayout  OAI22_X1.pinLayout  OAI22_X2.pinLayout  OR2_X1.pinLayout  OR2_X2.pinLayout  OR3_X1.pinLayout  OR3_X2.pinLayout  XOR2_X1.pinLayout
inputPinLayouts/pinLayouts_2F_4T_prepartition/: AND2_X1.pinLayout  AND2_X2.pinLayout  AND3_X1.pinLayout  AND3_X2.pinLayout  AOI21_X1.pinLayout  AOI21_X2.pinLayout  AOI22_X1.pinLayout  AOI22_X2.pinLayout  BUF_X1.pinLayout  BUF_X2.pinLayout  BUF_X4.pinLayout  BUF_X8.pinLayout  DFFHQN_X1.pinLayout  INV_X1.pinLayout  INV_X2.pinLayout  INV_X4.pinLayout  INV_X8.pinLayout  LHQ_X1.pinLayout  MUX2_X1.pinLayout  NAND2_X1.pinLayout  NAND2_X2.pinLayout  NAND3_X1.pinLayout  NAND3_X2.pinLayout  NAND4_X1.pinLayout  NAND4_X2.pinLayout  NOR2_X1.pinLayout  NOR2_X2.pinLayout  NOR3_X1.pinLayout  NOR3_X2.pinLayout  NOR4_X1.pinLayout  NOR4_X2.pinLayout  OAI21_X1.pinLayout  OAI21_X2.pinLayout  OAI22_X1.pinLayout  OAI22_X2.pinLayout  OR2_X1.pinLayout  OR2_X2.pinLayout  OR3_X1.pinLayout  OR3_X2.pinLayout  XOR2_X1.pinLayout
inputPinLayouts/pinLayouts_3F_5T/: AND2_X1.pinLayout  AND2_X2.pinLayout  AND3_X1.pinLayout  AND3_X2.pinLayout  AOI21_X1.pinLayout  AOI22_X1.pinLayout  BUF_X1.pinLayout  BUF_X2.pinLayout  BUF_X4.pinLayout  BUF_X8.pinLayout  INV_X1.pinLayout  INV_X2.pinLayout  INV_X4.pinLayout  INV_X8.pinLayout  LHQ_X1.pinLayout  NAND2_X1.pinLayout  NAND3_X1.pinLayout  NAND4_X1.pinLayout  NOR2_X1.pinLayout  NOR3_X1.pinLayout  NOR4_X1.pinLayout  OAI21_X1.pinLayout  OAI22_X1.pinLayout  OR2_X1.pinLayout  OR2_X2.pinLayout  OR3_X1.pinLayout  OR3_X2.pinLayout  XOR2_X1.pinLayout
inputPinLayouts/pinLayouts_3F_5T_prepartition/: AND2_X1.pinLayout  AND2_X2.pinLayout  AND3_X1.pinLayout  AND3_X2.pinLayout  AOI21_X1.pinLayout  AOI21_X2.pinLayout  AOI22_X1.pinLayout  AOI22_X2.pinLayout  BUF_X1.pinLayout  BUF_X2.pinLayout  BUF_X4.pinLayout  BUF_X8.pinLayout  INV_X1.pinLayout  INV_X2.pinLayout  INV_X4.pinLayout  INV_X8.pinLayout  MUX2_X1.pinLayout  NAND2_X1.pinLayout  NAND2_X2.pinLayout  NAND3_X1.pinLayout  NAND3_X2.pinLayout  NAND4_X1.pinLayout  NAND4_X2.pinLayout  NOR2_X1.pinLayout  NOR2_X2.pinLayout  NOR3_X1.pinLayout  NOR3_X2.pinLayout  NOR4_X1.pinLayout  NOR4_X2.pinLayout  OAI21_X1.pinLayout  OAI21_X2.pinLayout  OAI22_X1.pinLayout  OAI22_X2.pinLayout  OR2_X1.pinLayout  OR2_X2.pinLayout  OR3_X1.pinLayout  (+2 more)
src/: SMTCell.cpp  SMTCell.hpp  convSMTResult.cpp  dbConfig.cpp  dbConfig.hpp  design_rule.cpp  design_rule.hpp  flow.cpp  flow.hpp  format.hpp  genSMTInputAGR.cpp  genTestCase.cpp  graph.cpp  graph.hpp  layoutParser.cpp  layoutParser.hpp  obj.cpp  obj.hpp  placement.cpp  placement.hpp
util/: check_AGR.py  check_config.py  check_input.py  check_sat.py  extract_cell.py
(+81 files in other folders)
